rework of dish card

--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,4 +1,10 @@
 // Thin fonts
+.ro-font-thin-very-small {
+  font-weight: 100;
+  font-size: 0.8rem;
+  line-height: 0.9rem;
+}
+
 .ro-font-thin-small {
   font-weight: 100;
   font-size: 1.1rem;
