implemented dish card modal, added counter component

--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -12,6 +12,12 @@
 }
 
 // Light fonts
+.ro-font-light-very-small {
+  font-weight: 300;
+  font-size: 0.8rem;
+  line-height: 0.9rem;
+}
+
 .ro-font-light-small {
   font-weight: 300;
   font-size: 1.1rem;
