--- a/src/components/MenuDish/DishCardModal/styles.scss
+++ b/src/components/MenuDish/DishCardModal/styles.scss
@@ -1,7 +1,10 @@
 .components__dish-card-modal {
-  width: 640px;
+  max-width: 560px;
 }
 
 .dish-card-modal__image-wrapper {
-  width: 180px;
+  > img {
+    width: 180px;
+    height: 180px;
+  }
 }
