--- a/src/components/MenuDish/styles.scss
+++ b/src/components/MenuDish/styles.scss
@@ -1,8 +1,7 @@
 @import '../../variables.scss';
 
 .component__dish {
-  width: 270px;
-  height: 310px;
+  width: 100%;
   background-color: $ro-colors-base-element-background;
   border-radius: 25px;
 
