--- a/src/components/core/Button/styles.scss
+++ b/src/components/core/Button/styles.scss
@@ -7,12 +7,31 @@
   border-radius: 30px;
   outline: none;
   transition: background-color ease-in 200ms;
+  &:focus {
+    outline: none;
+  }
+}
 
-  &:hover {
+.components__button_primary {
+  background-color: $ro-colors-primary;
+
+  &:hover, &:focus, &:active {
     background-color: $ro-colors-toggled;
   }
 
-  &:focus {
-    outline: none;
+  &:disabled {
+    background-color: $ro-colors-secondary;
+  }
+}
+
+.components__button_danger {
+  background-color: $ro-colors-error-normal;
+
+  &:hover, &:focus, &:active {
+    background-color: $ro-colors-error-toggled;
+  }
+
+  &:disabled {
+    background-color: $ro-colors-error-secondary;
   }
 }
