implemented OrderInfo page, empty cart image added

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -33,6 +33,10 @@
   color: $ro-colors-error-normal;
 }
 
+.ro-text-primary {
+  color: $ro-colors-primary;
+}
+
 .ro-border-error {
   border: 1px solid $ro-colors-error-normal;
 }
