--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -48,7 +48,7 @@
   font-weight: $ro-font-medium-weight;
 }
 
-.ro-font-medium-middle {
+.ro-font-medium-big {
   font-weight: $ro-font-medium-weight;
   @include big-font();
 }
