--- a/src/variables.scss
+++ b/src/variables.scss
@@ -7,6 +7,7 @@ $ro-colors-warning: #FFA000;
 $ro-colors-error-normal: #E64A19;
 $ro-colors-error-toggled: #D33300;
 $ro-colors-error-secondary: #E98C6F;
+$ro-colors-success: #7CB342;
 
 $ro-colors-gray-light: #EFEFEF;
 $ro-colors-gray-medium: #BDBDBD;
