admin menu reworking, imalemented editable dish card, inline edit icon component

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -25,6 +25,10 @@
   border: 1px solid $ro-colors-warning;
 }
 
+.ro-vector-fill-white {
+  fill: white;
+}
+
 .ro-vector-fill-warning {
   fill: $ro-colors-warning;
 }
