--- a/src/components/MenuDish/DishCardModal/styles.scss
+++ b/src/components/MenuDish/DishCardModal/styles.scss
@@ -2,9 +2,7 @@
   max-width: 560px;
 }
 
-.dish-card-modal__image-wrapper {
-  > img {
-    width: 180px;
-    height: 180px;
-  }
+.dish-card-modal__image {
+  width: 180px;
+  height: 180px;
 }
