--- a/src/variables.scss
+++ b/src/variables.scss
@@ -7,7 +7,9 @@ $ro-colors-warning: #FFA000;
 $ro-colors-error-normal: #E64A19;
 $ro-colors-error-toggled: #D33300;
 $ro-colors-error-secondary: #E98C6F;
-$ro-colors-success: #7CB342;
+$ro-colors-success-normal: #7CB342;
+$ro-colors-success-toggled: #5F9C1F;
+$ro-colors-success-secondary: #A9D878;
 
 $ro-colors-gray-light: #EFEFEF;
 $ro-colors-gray-medium: #BDBDBD;
