--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,6 +3,7 @@ $ro-colors-primary: #1E88E5;
 $ro-colors-secondary: #6AB7FF;
 $ro-colors-toggled: #275CC2;
 $ro-colors-base-element-background: #FFFFFF;
+$ro-colors-base-element-opposite: #000000;
 $ro-colors-warning: #FFA000;
 $ro-colors-error-normal: #E64A19;
 $ro-colors-error-toggled: #D33300;
