--- a/src/components/DishCategory/styles.scss
+++ b/src/components/DishCategory/styles.scss
@@ -19,6 +19,19 @@
     padding: 20px;
   }
 
+  .category__label {
+    width: 100%;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .category__edit-button {
+    position: absolute;
+    margin-top: -30px;
+    margin-left: -20px;
+  }
+
   &:hover {
     @include ro-small-shadow();
   }
