--- a/src/components/MenuDish/styles.scss
+++ b/src/components/MenuDish/styles.scss
@@ -9,4 +9,10 @@
     width: 180px;
     height: 180px;
   }
+
+  .dish__edit-button {
+    position: absolute;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
 }
