--- a/src/components/core/TextInput/style.scss
+++ b/src/components/core/TextInput/style.scss
@@ -7,10 +7,11 @@
 
   display: flex;
   background-color: white;
-  border-radius: 60px;
+  border: 1px solid $ro-colors-gray-medium;
+  border-radius: 20px;
 
   input {
-    border-radius: 60px;
+    border-radius: 20px;
     border: none;
     outline: none;
     padding: 5px 15px;
@@ -23,5 +24,16 @@
 
   &:focus-within {
     @include ro-basic-shadow;
+  }
+}
+
+.components__input-holder_textarea {
+  resize: none;
+  outline: none;
+  padding: 10px 15px;
+  width: 100%;
+
+  &::placeholder {
+    font-weight: $ro-font-thin-weight;
   }
 }
