implemented dish and category edit dialog fully features

--- a/src/components/DishCategory/styles.scss
+++ b/src/components/DishCategory/styles.scss
@@ -8,6 +8,7 @@
   padding: 7px 0;
   color: $ro-colors-gray-medium;
   transition: $ro-effects-base-shadow-transition, background-color linear 300ms;
+  color: black;
 
   .category__image-container {
     background-color: $ro-colors-base-element-background;
