--- a/src/index.scss
+++ b/src/index.scss
@@ -40,9 +40,8 @@ code {
     monospace;
 }
 
-a.deco-none {
-  color: #000000;
-  text-decoration: none;
+a {
+  color: inherit !important;
 }
 
 .cursor-pointer {
