--- a/src/components/MenuDish/styles.scss
+++ b/src/components/MenuDish/styles.scss
@@ -5,7 +5,7 @@
   background-color: $ro-colors-base-element-background;
   border-radius: 25px;
 
-  img {
+  .dish__image {
     width: 180px;
     height: 180px;
   }
