fix order dto's, implement make order spending bonuses and select telephone number

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -22,7 +22,7 @@
 }
 
 .ro-border-warning {
-  border: 1px solid $ro-colors-warning;
+  border: 1px solid $ro-colors-warning !important;
 }
 
 .ro-vector-fill-white {
