added burger animation, imrpove userdata/login form, added loading state to menu, order approve

--- a/src/components/UserDataForm/styles.scss
+++ b/src/components/UserDataForm/styles.scss
@@ -1,10 +1,6 @@
 @import '../../variables.scss';
 
-.oauth2-button {
-  width: 270px;
-}
-
-.login-form-wrapper {
+.user-data-form {
   background-color: $ro-colors-base-element-background;
   border-radius: 20px;
   padding: 30px;
