added texttooltip component (added to cart dish price), set fixed width for cartdish price, fix makeorder api request

--- a/src/features/CartContainer/CartDish/styles.scss
+++ b/src/features/CartContainer/CartDish/styles.scss
@@ -9,4 +9,11 @@
     width: 90px;
     height: 90px;
   }
+
+  .cart-dish__price {
+    width: 80px;
+    text-align: right;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
