added categoryId in analytics api, added link to dish in orders analytics dish names column

--- a/src/index.scss
+++ b/src/index.scss
@@ -40,16 +40,21 @@ code {
     monospace;
 }
 
-a {
-  color: inherit !important;
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
 
 .text-end {
   text-align: end;
+}
+
+.link-no-effects {
+  color: inherit;
+
+  &:hover {
+    text-decoration: none;
+    color: inherit;
+  }
 }
 
 .ro-text-small {
