--- a/src/components/core/Button/styles.scss
+++ b/src/components/core/Button/styles.scss
@@ -5,7 +5,6 @@ $base-button-text-color: white;
 .components__button {
   border: none;
   color: $base-button-text-color;
-  padding: 10px 15px;
   border-radius: 30px;
   outline: none;
   transition: background-color ease-in 200ms;
@@ -18,6 +17,14 @@ $base-button-text-color: white;
     width: 20px;
     height: 20px;
   }
+}
+
+.components__button_small {
+  padding: 0px 15px;
+}
+
+.components__button_normal {
+  padding: 10px 15px;
 }
 
 .components__button_primary {
